<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:gravity="end"
        >

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/border"
            android:backgroundTint="#DCDCDC"
            android:padding="10dp">

        <TextView
                android:id="@+id/userMessageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@android:color/black"
                android:maxWidth="200dp"
                android:text="@string/mensaje_del_usuario" />

        <TextView
                android:id="@+id/userMessageTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@android:color/darker_gray"
                android:layout_marginTop="4dp"
                android:text="@string/_10_30_am"
                android:visibility="gone" />


    </LinearLayout>


    <ImageView
            android:id="@+id/systemIcon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/usuario"
            android:contentDescription="@string/user_message"
            android:layout_marginStart="8dp" />

</LinearLayout>
